RESOLVED FIXED279858
Clean up state in PageLoadTimingFrameLoadStateObserver better when running PLT with site isolation
https://bugs.webkit.org/show_bug.cgi?id=279858
Summary Clean up state in PageLoadTimingFrameLoadStateObserver better when running PL...
Alex Christensen
Reported 2024-09-17 18:58:31 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-17 19:00:18 PDT
Alex Christensen
Comment 2 2024-09-17 19:10:39 PDT
EWS
Comment 3 2024-09-17 21:09:16 PDT
Committed 283819@main (ccc524ab9694): <https://commits.webkit.org/283819@main> Reviewed commits have been landed. Closing PR #33803 and removing active labels.
Fujii Hironori
Comment 4 2024-09-18 00:31:41 PDT
Regressed: Bug 279872 – REGRESSION(283819@main): ASSERTION FAILED: !m_loadingFrameCount
Note You need to log in before you can comment on or make changes to this bug.