Source/WebKit/UIProcess/WebFrameProxy.cpp
@@ -90,9 +90,9 @@ bool WebFrameProxy::canCreateFrame(FrameIdentifier frameID)
 WebFrameProxy::WebFrameProxy(WebPageProxy& page, FrameProcess& process, FrameIdentifier frameID, SandboxFlags effectiveSandboxFlags, IsMainFrame isMainFrame)
     : m_page(page)
     , m_frameProcess(process)
+    , m_frameLoadState(isMainFrame)
     , m_frameID(frameID)
     , m_layerHostingContextIdentifier(LayerHostingContextIdentifier::generate())
-    , m_isMainFrame(isMainFrame)
     , m_effectiveSandboxFlags(effectiveSandboxFlags)
 {
     ASSERT(!allFrames().contains(frameID));
@@ -410,7 +410,7 @@ void WebFrameProxy::didCreateSubframe(WebCore::FrameIdentifier frameID, const St
     MESSAGE_CHECK(WebFrameProxy::canCreateFrame(frameID));
     MESSAGE_CHECK(frameID.processIdentifier() == process().coreProcessIdentifier());
 
-    Ref child = WebFrameProxy::create(*page, m_frameProcess, frameID, effectiveSandboxFlags, WebFrameProxy::IsMainFrame::No);
+    Ref child = WebFrameProxy::create(*page, m_frameProcess, frameID, effectiveSandboxFlags, IsMainFrame::No);
     child->m_parentFrame = *this;
     child->m_frameName = frameName;
     page->observeAndCreateRemoteSubframesInOtherProcesses(child, frameName);
@@ -668,6 +668,11 @@ WebFrameProxy& WebFrameProxy::rootFrame()
     while (rootFrame->m_parentFrame && rootFrame->m_parentFrame->process().coreProcessIdentifier() == process().coreProcessIdentifier())
         rootFrame = *rootFrame->m_parentFrame;
     return rootFrame;
+}
+
+bool WebFrameProxy::isMainFrame() const
+{
+    return m_frameLoadState.isMainFrame() == IsMainFrame::Yes;
 }
 
 } // namespace WebKit
